Fixes #1- add C/F setting
Adds celsius/fahrenheit setting in the companion
Also increase stale weather timeout from 30 minutes to 60 minutes
(displays "NA").

--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
       "run_background",
       "access_heart_rate"
     ],
+    "buildTargets": [
+      "higgs"
+    ],
     "i18n": {
       "en": {
         "name": "Time/Date/Weather"
