--- a/package.json
+++ b/package.json
@@ -30,7 +30,10 @@
     "npx": "^10.2.0"
   },
   "devDependencies": {
-    "@fitbit/sdk": "^1.0.5",
+    "@fitbit/sdk": "^3.0.0",
     "@fitbit/sdk-cli": "^1.5.0"
+  },
+  "scripts": {
+    "build": "fitbit-build"
   }
 }
