--- a/package.json
+++ b/package.json
@@ -5,7 +5,6 @@
   },
   "license": "SEE LICENSE IN LICENSE",
   "fitbit": {
-    "appUUID": "9441c0d4-3370-4295-9df7-c4e1edad8ade",
     "appType": "clockface",
     "appDisplayName": "Time/Date/Weather",
     "iconFile": "resources/icon.png",
@@ -24,7 +23,8 @@
       "en": {
         "name": "Time/Date/Weather"
       }
-    }
+    },
+    "appUUID": "0f92e858-dfd1-48a1-9f68-b6a4f76c3ca5"
   },
   "dependencies": {
     "npx": "^10.2.0"
