--- a/package.json
+++ b/package.json
@@ -30,8 +30,8 @@
     "npx": "^10.2.0"
   },
   "devDependencies": {
-    "@fitbit/sdk": "^3.1.2",
-    "@fitbit/sdk-cli": "^1.6.3"
+    "@fitbit/sdk": "~4.0.0",
+    "@fitbit/sdk-cli": "^1.7.0"
   },
   "scripts": {
     "build": "fitbit-build"
