Update to sdk 5.0

--- a/package.json
+++ b/package.json
@@ -18,10 +18,6 @@
       "access_heart_rate"
     ],
     "buildTargets": [
-      "higgs",
-      "meson",
-      "gemini",
-      "mira",
       "atlas",
       "vulcan"
     ],
@@ -35,9 +31,8 @@
     "npx": "~10.2.2"
   },
   "devDependencies": {
-    "@fitbit/sdk": "5.0.0-pre.1",
-    "@fitbit/sdk-build-targets": "^1.5.0",
-    "@fitbit/sdk-cli": "~1.7.1",
+    "@fitbit/sdk": "~5.0.1",
+    "@fitbit/sdk-cli": "^1.7.3",
     "@typescript-eslint/eslint-plugin": "^2.32.0",
     "@typescript-eslint/parser": "^2.32.0",
     "eslint": "7.0.0",
